# whisperlite

./: .gitignore  FAQ.md  LICENSE  README.md  TODO.md  config.example.toml  pyproject.toml  whisperlite.example.toml
.github/workflows/: test.yml
tests/: conftest.py
tests/integration/: test_app.py  test_audio.py  test_hotkey.py  test_inject.py  test_sounds.py  test_transcribe.py
tests/smoke/: smoke_audio.py  smoke_full.py  smoke_hotkey.py  smoke_inject.py  smoke_transcribe.py
tests/unit/: test_audio_conversion.py  test_config.py  test_errors.py
whisperlite/: __main__.py  app.py  audio.py  config.py  errors.py  hotkey.py  inject.py  sounds.py  transcribe.py
